# ModManagerX

./: .gitignore  CMakeLists.txt  ImportDialog.ui.qml  Main.qml  MainMenu.ui.qml  MainScreen.ui.qml  README.md  backend.cpp  backend.h  language.cpp  language.h  main.cpp  mmx.qmlproject  mmx.qmlproject.qtds  mmx.qrc  modpack.cpp  modpack.h  resource.h  resources.rc  utilities.cpp  utilities.h  vcpkg.json
lang/: en_US.json
